2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add missing component packing file.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Initial work on a serious spring-electrical algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add a variety of vector math functions to the Vector class.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Allow algorithms to have spaces and - in their name.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- More options, mostly undocumented.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Further work on the documentation.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Improve the orientation examples.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Move docs to graphdrawing.standard. Add more options. Most notably, this
	commit (hopefully) finishes the implementation of the /tikz/orientation
	and /tikz/orientation' options.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add experimental layout style. Document the orientation option.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add utility for adjusting the orientation of a graph. Update vector
	class.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Hook up my own TikZ documentation. Will merge with graphdrawing later.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Fix stuff that went missing during the rebase (manual merging = teh
	suck). Thank you Mercurial. I already loathe you deeply.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Temporarily add edge bend points/nodes. Add crappy layered algorithm.
	This algorithm will be replaced later. Just versioning my experimental
	crap here.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add helpers for implementing a variety of graph traversal iterators.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Merge pgfgdbeginscopi and pgf@gd@beginscope. Use {begin,end}group.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add a new iter.times(n) helper to generate n loops.
