@@ -1,5 +1,10 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add cooling function. Enforce small distance for nodes at same location.
+	Also default to 500 iterations max.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Add missing component packing file.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
